2006-02-13  Edward Hervey  <edward@fluendo.com>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_release_buffer),
	(gst_ffmpegdec_frame):
	More fixes for keyframe detection in ffmpeg decoders...

2006-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_to_pixfmt):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_getcaps):
	  respect pixel-aspect-ratio when encoding.

2006-02-12  Edward Hervey  <edward@fluendo.com>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_init),
	(gst_ffmpegdemux_close), (gst_ffmpegdemux_handle_seek),
	(gst_ffmpegdemux_add), (my_safe_copy), (gst_ffmpegdemux_read_tags),
	(gst_ffmpegdemux_open), (gst_ffmpegdemux_loop):
	Add Tag support and keyframe seeking (for those formats where ffmpeg
	actually fills in the index).
	* ext/ffmpeg/gstffmpegprotocol.c: (gst_ffmpegdata_peek),
	(gst_ffmpegdata_read), (gst_ffmpegdata_seek):
	Add support for size querying.

2006-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ffmpeg/gstffmpeg.c:
	  set correct version on the plug-in - the GStreamer
	  FFMpeg version.  I could swear I had already done this
	  before.

2006-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_class_init),
	(gst_ffmpegenc_init), (gst_ffmpegenc_setcaps):
	  debug and magic number fixes

2006-02-10  Edward Hervey  <edward@fluendo.com>

	* ext/ffmpeg/Makefile.am:
	* ext/ffmpeg/gstffmpeg.c: (plugin_init):
	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_base_init),
	(gst_ffmpegdemux_init), (gst_ffmpegdemux_stream_from_pad),
	(gst_ffmpegdemux_handle_seek), (gst_ffmpegdemux_src_event),
	(gst_ffmpegdemux_src_query_list), (gst_ffmpegdemux_src_query),
	(gst_ffmpegdemux_add), (gst_ffmpegdemux_open),
	(gst_ffmpegdemux_loop), (gst_ffmpegdemux_sink_activate),
	(gst_ffmpegdemux_sink_activate_pull),
	(gst_ffmpegdemux_change_state), (gst_ffmpegdemux_register):
	* ext/ffmpeg/gstffmpegprotocol.c: (gst_ffmpegdata_open),